--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
